--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^11.4.2",
     "eslint": "^5.7.0",
     "ffmpeg-binaries": "^4.0.0",
-    "node-opus": "^0.3.0"
+    "node-opus": "^0.3.0",
+    "discord.js": "^11.4.2"
   },
   "bugs": {
     "url": "https://github.com/nkrobinson/SpookBot/issues"
